Initial commit: Spring Boot + Apache Spark Multi-DB JOIN implementation